fixed user dropdown menu z-index

--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -35,6 +35,8 @@
   background-color: white;
   width: 6rem;
   padding-left: 1rem;
+  position: relative;
+  z-index: 3;
   /* z-index: 5;
   border: 3px solid red; */
 }
